# Trabalho-pratico-AEDS

./: CMakeLists.txt  README.md  TestesTad.c  hora.c  listaBackup.c  listaDeProcessos.c  listaDeProcessos.h  main.c  processo.c  processo.h  tentando main.c
codigo/: CMakeLists.txt  output.txt
codigo/listaDeProcessos/: listaDeProcessos.c  listaDeProcessos.h
codigo/processo/: processo.c  processo.h
codigo/programaPrincipal/: main.c
codigo/testes/: teste200000.txt  teste300000.txt  teste400000.txt
implementação lucas/: processo.c  processo.h
testes/: teste100000.txt  teste500000.txt  teste600000.txt  testeMoodle
